--- a/style.css
+++ b/style.css
@@ -31,9 +31,10 @@ body{
     height: 45vh;
     background: rgb(255, 255, 255);
     display: grid;
-    grid-template-columns: auto auto auto  ;
-    grid-template-rows: auto auto auto ;
-    gap: 0.5rem;
+    
+    /* grid-template-columns: repeat( 3,auto); */
+    /* grid-template-rows: auto auto auto ; */
+    /* gap: 0.5rem; */
     /* grid-template-areas: 
     'pixel pixel pixel'
     'pixel pixel pixel'
@@ -41,8 +42,8 @@ body{
     ; */
 }
 .pixel{
-    border: solid black;
-    background: rgb(118, 89, 145);
+    /* border: solid black; */
+    background: rgb(255, 255, 255);
     grid-area: pixel 1fr;
 }
 .controls{
@@ -64,4 +65,10 @@ body{
 }
 .filled{
     background: black;
+}
+/* form */
+form{
+    display: flex;
+    justify-content: center;
+    margin: 1rem 2rem;
 }
